[build-system]
requires = ["setuptools>=68", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "fastapi-gradual-throttle"
dynamic = ["version"]
description = "FastAPI rate limiting and throttling middleware — gradual delay, strict 429, combined mode, Redis backend, per-route overrides"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Dhruv Patel", email = "pateldhruvn2004@gmail.com"},
]
maintainers = [
    {name = "Dhruv Patel", email = "pateldhruvn2004@gmail.com"},
]
keywords = [
    "fastapi",
    "starlette",
    "middleware",
    "throttling",
    "rate-limiting",
    "rate-limiter",
    "gradual",
    "delay",
    "api-throttling",
    "request-throttling",
    "fastapi-middleware",
    "fastapi-rate-limit",
    "python-rate-limiter",
    "redis-rate-limit",
    "token-bucket",
    "sliding-window",
    "abuse-prevention",
    "api-protection",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Networking",
    "Typing :: Typed",
]
dependencies = [
    "fastapi>=0.68",
    "starlette>=0.20",
    "pydantic-settings>=2.0",
]

[project.urls]
Homepage = "https://github.com/Dhruvpatel004/fastapi_gradual_throttle"
Documentation = "https://github.com/Dhruvpatel004/fastapi_gradual_throttle#readme"
Repository = "https://github.com/Dhruvpatel004/fastapi_gradual_throttle"
"Bug Tracker" = "https://github.com/Dhruvpatel004/fastapi_gradual_throttle/issues"
Changelog = "https://github.com/Dhruvpatel004/fastapi_gradual_throttle#changelog"

[project.optional-dependencies]
redis = ["redis>=4.2"]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "httpx>=0.24",
    "pytest-cov>=4.0",
    "ruff>=0.1",
    "mypy>=1.0",
]

[tool.setuptools.packages.find]
include = ["fastapi_gradual_throttle*"]

[tool.setuptools.package-data]
fastapi_gradual_throttle = ["py.typed"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "no-local-version"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[dependency-groups]
dev = [
    "black>=26.3.1",
    "isort>=8.0.1",
]
